Signed-off-by: Saitenreisser1000 <stefanleutgeb@gmx.at>

--- a/index.html
+++ b/index.html
@@ -101,20 +101,15 @@
         <script type="text/javascript" src="jemp-sequencer.js"></script>
         <script type="text/javascript" src="jemp-toneplayer.js"></script>
         <script type="text/javascript" src="testsong.js"></script>
-        <script type="text/javascript" src="jempUI.js"></script>
-        <script type="text/javascript" src="init.js"></script>
+
+
         <script type="text/javascript" src="dataTransfer.js"></script>
         <script type="text/javascript" src="songTable.js"></script>
-        <!--script type="text/javascript" src="scripts/SetPoint.js"></script>
-        <script type="text/javascript" src="Songs/songDataCrypt.js"></script>    
-        <script type="text/javascript" src="scripts/positioning.js"></script>
-        <script type="text/javascript" src="scripts/sequencer.js"></script>
-        <script type="text/javascript" src="scripts/sounds.js"></script>
-        <script type="text/javascript" src="scripts/recordLayer.js"></script>
-        <script type="text/javascript" src="scripts/dataProcess.js"></script>
+        <script type="text/javascript" src="recordLayer.js"></script>
+        <script type="text/javascript" src="jempUI.js"></script>
+        <script type="text/javascript" src="init.js"></script>
 
-        <script type="text/javascript" src="scripts/input.js"></script>
-        <script type="text/javascript" src="scripts/toneJSSequencer.js"></script-->
+        <!--script type="text/javascript" src="Songs/songDataCrypt.js"></script-->
                
     </body>  
 </html>
