connect to ToneJs to Guitarjemp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
-<!DOCTYPE Html>
+<!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="styles/guitarJemp.css">
         <link rel="stylesheet" href="styles/guitarStyle.css">
