updated schedule system

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <script type="text/javascript" src="dataTransfer.js"></script>
         <script type="text/javascript" src="scripts/prepareLoadedSong.js"></script>
         <script type="text/javascript" src="jemp-sequencer.js"></script>
-        <script type="text/javascript" src="SetPoint.js"></script>
+        <script type="text/javascript" src="setPoint.js"></script>
         <script type="text/javascript" src="jemp-toneplayer.js"></script>
         <script type="text/javascript" src="recordLayer.js"></script>
         <script type="text/javascript" src="init.js"></script>
