--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-        <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.2.1/dist/js/tabulator.min.js"></script>
+        <link href="dist/css/tabulator.css" rel="stylesheet">
+        <script type="text/javascript" src="dist/js/tabulator.js"></script>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.8.12/Tone.js"></script>
         
